fixed x-overflow in mobile version

--- a/style.css
+++ b/style.css
@@ -96,6 +96,9 @@ label {
 }
 
 @media (max-width: 780px) {
+    * {
+        overflow-x: hidden;
+    }
     .who {
         width: 100%;
         height: fit-content;
